# DownstreamDOE

./: .gitignore  LICENSE  README.md  implementation.md  plan.md  pyproject.toml
doc/: Makefile  README.md  main.tex  pyfvtool_coupled_models.md
doc/chapters/: about.tex  appendix_grm.tex  authors.tex  bibliography.tex  ch1_models.tex  ch2_design.tex  ch3_fermentation.tex  ch4_benchtop.tex  foundations_separation.tex  foundations_stats.tex  preface.tex
doc/scripts/: build_html.sh  build_pdf.sh  make_benchtop_figures.py  make_fermentation_figures.py  make_figures.py  make_foundations_figures.py  make_grm_figures.py  monograph.css  release.sh
notebooks/: 01_virtual_laboratory.ipynb  02_full_factorial_doe.ipynb  03_lhs_design_space.ipynb  04_bayesian_optimization.ipynb  05_uq_parameter_estimation.ipynb  06_chromatography_modes.ipynb  07_fermentation_doe.ipynb  08_covering_array_strain_screening.ipynb  09_benchtop_doe.ipynb
reports/: tech_transfer_report.md
src/downstream_doe/: __init__.py  config.py  perturbation.py  viz.py
src/downstream_doe/doe/: __init__.py  analysis.py  covering.py  factorial.py  importance.py  lhs.py  multivariate.py
src/downstream_doe/foundations/: __init__.py  separation_demo.py  stats_demo.py
src/downstream_doe/models/: __init__.py  chromatography.py  ufdf.py
src/downstream_doe/models/benchtop/: __init__.py  (+4 more)
src/downstream_doe/optimization/: __init__.py  bayesopt.py  surrogate.py
src/downstream_doe/uq/: __init__.py  inverse.py  uncertainty.py
tests/: test_benchtop.py  test_chromatography_modes.py  test_covering.py  test_doe.py  test_fermentation.py  test_foundations.py  test_grm.py  test_models.py  test_multivariate.py  test_perturbation.py
(+18 files in other folders)
