[project]
name = "DownstreamDOE"
version = "0.1.0"
description = "Virtual laboratory for downstream bioprocess characterization & advanced DoE (chromatography + UF/DF mechanistic models, factorial/LHS designs, Bayesian optimization, and UQ)"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ali A. Eftekhari" }]
license = { text = "MIT" }
dependencies = [
    "bofire[optimization]>=0.3.1",
    "ipykernel>=7.2.0",
    "pydoe>=1.0.2",
    "statsmodels>=0.14",
    "emcee>=3.1",
    "arviz>=0.18",
    "pyfvtool",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/downstream_doe"]

[tool.uv.sources]
pyfvtool = { git = "https://github.com/FiniteVolumeTransportPhenomena/PyFVTool.git" }
